# SignInC

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  SignInC  cmake_install.cmake  message.json  message.txt  private.pem  public.pem  signature.txt  signed_message.json
Testing/Temporary/: CTestCostData.txt
src/: logger.h  main.cpp  signer.cpp  signer.h  test.cpp  utils.h
tests/: test_signinC.cpp
